Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125285

QKdeTheme falls back to Qt::ColorScheme::Unknown on invalid desktop theme

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.2, 6.8.0 FF
    • 6.5, 6.7, 6.8
    • GUI: Look'n'Feel
    • None
    • Linux/X11
    • b0b34c56a (dev), 802cd973f (dev), 71d0de983 (dev), 4d4aa3078 (6.7), 1c2bd7809 (6.7), 56c37e7dd (6.7), b8a2d1215 (tqtc/lts-6.5), a57d5b1fd (dev), 09590ee99 (6.9), 39851d13f (6.8)

      QKdeTheme expects KDE settings to be stored in specific locations.
      If an unsupported linux distribution stores theme settings elsewhere or not at all, reading the settings will return a default constructed QVariant. In this case, the color scheme will not be updated. When the theme name is found, but does not contain the key words "dark" or "light", the colorScheme is determined heuristically. This fallback doesn't happen, when no theme is found.

      While harmless for supported platforms, this behavior could be changed to the benefit of unsupported ones.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            axelspoerl Axel Spoerl
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: