Fix documentation of QKdeThemePrivate::updateColorScheme()

The method's documentation mentions appearance, instead of color scheme.
Update it.

Task-number: QTBUG-125285
Pick-to: 6.7 6.5
Change-Id: Iceb2b7d0a51d0ba34f98dd942d7988feb685a4f6
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>